@startuml
enum CellContent {
    Enemy
    Wall
    Empty
}
interface IMapLoader {
    + LoadAsync() : Task<CellContent[,]>
}

class MapLoader {
    - _path: string
    + MapLoader(path: string)
    + LoadAsync() : Task<CellContent[,]>
}

class StreamMapLoader {
    - stream: Stream
    + StreamMapLoader(stream: Stream)
    + LoadAsync() : Task<CellContent[,]>
}

MapLoader -up-|>IMapLoader
StreamMapLoader -up-|>IMapLoader

@enduml